--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d nuxt"
   },
   "dependencies": {
     "core-js": "^3.19.3",
@@ -16,5 +18,7 @@
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
