--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d nuxt"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "core-js": "^3.19.3",
@@ -19,6 +18,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "push-dir": "^0.4.1"
   }
 }
